[tool.poetry]
name = "rnaprocessor"
version = "0.1.0"
description = "a processor for machine learning implementation of the target annotations and processing the transcriptomics for machine learning applications"
authors = ["Gaurav Sablok"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
